# JobWebScrapper

./: .gitignore  .pylintrc  Makefile  Task.md  pyproject.toml
.github/: CI.yml
.github/workflows/: BasicCI.yml  OnMasterCI.yml
src/: app.py  models.py  scraper.py
tests/: test_scraper.py
tests/test_materials/: job_data.txt  job_page.html  jobs_list_page.html
