[tool.poetry]
name = "jobwebscrapper"
version = "0.1.0"
description = "this is tool for scrapping information about jobs from different websits"
authors = ["danila12315454 <danilaprig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.25"
colorama = "^0.4.6"
customtkinter = "^5.2.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^7.4.4"
pytest-coverage = "^0.0"
black = "^23.12.1"
flake8 = "^7.0.0"
pylint = "^3.0.3"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240125"
types-beautifulsoup4 = "^4.12.0.20240106"
types-colorama = "^0.4.15.20240106"
requests-mock = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79


[tool.flake8]
ban-todos = true


[tool.pytest.ini_options]
addopts = "--strict-markers -W error"
junit_family = "xunit2"
xfail_strict = true
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]


[tool.mypy]
strict = true
plugins = "sqlalchemy.ext.mypy.plugin"


[tool.coverage.run]
branch = true


[tool.coverage.report]
show_missing = true
skip_covered = true
